<resources>
    <string name="hello">Hello</string>
    <string name="app_name">Zookie</string>
    <string name="friend_list">Friend List</string>
    <string name="username">Phone number</string>
    <string name="password">OTP</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="messaging">Messaging</string>
    <string name="local_service_started">App service started</string>
    <string name="local_service_stopped">App service stopped</string>
    <string name="local_service_connected">local_service_connected</string>
    <string name="OK">OK</string>
    <string name="not_connected_to_service">Not connected to the service and
	this is not supposed to happened so please inform this situation to 
	ahmetmermerkaya@hotmail.com</string>
    <string name="fill_both_username_and_password">Please fill both country code and phone number</string>
    <string name="make_sure_username_and_password_correct">Please make sure that
	your username and password correct</string>
    <string name="user_offline">This user is offline</string>
    <string name="sign_up">Sign up</string>
    <string name="exit_application">Exit</string>
    <string name="password_again">Password(again):</string>
    <string name="email">E-mail</string>
    <string name="signup_fill_all_fields">Please fill all fields</string>
    <string name="signup_type_same_password_in_password_fields">Type same password in password fields</string>
    <string name="signup_failed">Sign up failed because of unknown reason</string>
    <string name="signup_username_crashed">Your username have been already taken, please try another username</string>
    <string name="signup_successfull">Your registration is completed successfully,\n you can login now </string>
    <string name="username_and_password_length_short">Username and password length must be at least 5</string>
    <string name="add_new_friend">Add new friend</string>
    <string name="no_friend">You have no friend,\n you can add new friends by menu</string>
    <string name="add">Add</string>
    <string name="request_sent">Your request has been sent</string>
    <string name="type_friend_username">Please type your friend username</string>
    <string name="new_friend_request_exist">New friend request</string>
    <string name="approve_selected_friends">Approve Selecteds and Discard Others</string>
    <string name="not_connected_to_network">There is no available connected network</string>
    <string name="message_cannot_be_sent">Message was not been able to sent</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Log Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="your_name">Your Name</string>
    <string name="send_button_label">Send</string>
    <string name="poll_title">Poll title</string>
    <string name="poll_details">Details of the poll (optional)</string>
    <string name="option_name">Option name</string>
    <string name="new_poll_option">New Option</string>
    <string name="clear_vote">Clear vote</string>
    <string name="done">Done</string>
    <string name="option_first_cap">Option</string>
    <string name="vote_count">Vote count</string>
</resources>